
message LoginRequest 
{  
  required string name = 1;    
  required string password = 2;
}

message LoginReturn
{
	required int32 result = 1;
	
	optional UserData userdata = 2;
}

message UserData
{
	required uint32 id = 1;
	required string name = 2;
	
}

message LoginGameNotify
{
	required string ip = 1;
	required int32 port = 2;
}

message LoginGameRequest
{
	required uint32 id = 1; 
}

message LoginGameReturn
{
	required int32 result = 1;
}



message Point2D
{
	required float x = 1;
	required float y = 2;
}

message BattleEntityData
{
	required uint32 hp =1;
	required uint32 maxhp = 2;
	required uint32 attack = 3;
	required uint32 defense = 4;
	required float movespeed = 5;
	required float attackspeed = 6;

	required Point2D position = 7;
	required Point2D direction = 8;
}

message BattleEntity
{
	required uint32 id = 1;
	required uint32 userid = 2;
	required uint32 camp = 3;
	required string name = 4;
	required uint32 type = 5;
	required uint32 config = 6;
	
	required BattleEntityData data = 7;
	
}
message BattleBeginRequest
{
	
}
message BattleBeginReturn
{
	required int32 result = 1;
}

message BattleBeginNotify
{
    required uint32 copy = 1;
	repeated BattleEntity list = 2;
}

message BattleEntityIdle
{	
	required uint32 id = 1;
	required uint32 copy = 2;
	optional BattleEntityData data =3;
}

message BattleEntityRun
{
	required uint32 id = 1;
	required uint32 copy = 2;
	required Point2D velocity = 3;
	optional BattleEntityData data = 4;
}

message BattleEntityAttack
{
	required uint32 id = 1;
	required uint32 copy = 2;
	required uint32 skill = 3;
	required uint32 attackspeed = 4;
	required uint32 target = 5;
	optional BattleEntityData data = 6;
}

message BattleEntityDie
{
	required uint32 id = 1;
	required uint32 copy = 2;
}

message BattleEntityBlood
{
	required uint32 id = 1;
	required uint32 copy = 2;
	required uint32 hp = 3;
	required int32 value = 4;
}

message BattleEndNotify
{
	required uint32 copy = 1;
}


